--- a/data points/1.md
+++ b/data points/1.md
@@ -60,7 +60,7 @@ Social media theke website ami check o kri na, karon beshirvag somoy update kre 
 
 - Over shopping in websites and shopping in social media which one you will peak? Why?
 
-[[Payement Better in website]]
+[[Payment Better in website]]
 Payment krar jonne ami website prefer krbo
 
  -"In offline we used to go in different shops to review and research about products and to guess current market price. We can also do the same via social media".  Do you agree.
@@ -76,7 +76,7 @@ Ei jinista krte pare na, dokandar er sth kth bola er alada appeal ache, ekta man
 -"Buying in social media gives more shopping vibe than website." Do you agree.
 
 [[Marketing better in social media]]
-[[Payement Better in website]]
+[[Payment Better in website]]
 Website prefer kri, online shopping blte website prefer kri.. Social media for marketing, website for kina
 
 - "Social media is more convenient than shop websites".  Do you agree
@@ -89,7 +89,7 @@ Social media marketing er jonne vlo, but product er attribute dekha, price dekha
 
 [[Formality makes website feel safer]]
 [[Social Media easier for mass people]]
-[[Payement Better in website]]
+[[Payment Better in website]]
 Social media easier karon ovabei banano, sob manush social media vlovabe use krte pare, but website ektu complex but dorkar ache, actual tk niye kaj hocche, rigorus howar dorkar ache. Social media er voucher system sobai krte pare, so je keu misuse krte pare, but website er nirdishto guideline ache, tai trust kra easier
 
 - Social media handles lacks the formality of website. Do you agree? 
@@ -105,7 +105,7 @@ Kichu khetre vlo, karon advertisement freely kra jay, contextual advertisement k
 - Do you think it is the reason for social media being more or less convenient? 
 
 [[Marketing better in social media]]
-[[Payement Better in website]]
+[[Payment Better in website]]
 Marketing er jonne more convenient but jesob jaygay formality dorkar e.g. payment egulate less convenient
 
 - "Mass people of Bangladesh can use social media more skilfully than websites. " Do you agree. 
