--- a/data points/46.md
+++ b/data points/46.md
@@ -40,6 +40,8 @@ Answer: Advantages: Easy accessibility
 
 Disadvantage: Authenticity
 
+
+
 What are the advantages and disadvantages of conducting business through social media?  
   
 Advantages: Easy accessibility
@@ -50,6 +52,8 @@ Disadvantages: Lack of interaction between colleagues and customers
 
 Answer: Yes. For spreading the business, online support, accessible to more people, improved services. 
 
+
+[[Reach social media]]
   
 
   
@@ -60,7 +64,8 @@ Bangladesh? Social media or website? What are the reasons?
 
 Answer : Website. It will enhance the authenticity of the product, give the consumers more clear vision, better payment system and create a brand name.
 
-  
+  [[Overview better in website]]
+  [[Payment Better in website]]
 
 7."When I go to any website I look for social media handle." Do you agree
 
@@ -81,6 +86,7 @@ Answer : Websites
 10."In offline we used to go in different shops to review and research about products and to guess current market price. We can also do the same via social media". How much do you agree and why?
 
  Answer: I agree it. Via social media we can guess the market price very easily but not the quality of the product.
+
 
   
 
@@ -108,9 +114,12 @@ Answer: Disagree
 
 Answer: Agree
 
+[[Human interaction in Social Media]]
+
 15."Social media handles lacks the formality of website. "How much do you agree and why.
 
 Answer: Strongly Agree
+
 
 16.Do you like lack of formality of social media shops?
 
@@ -125,6 +134,7 @@ Answer: yes.
 agree.
 
 Answer: Strongly Agree
+
 
 19."Mass people uses social media more than any other websites. Its interface are familiar to
 
