DP 44 non-decreasing order

--- a/data points/44.md
+++ b/data points/44.md
@@ -30,9 +30,13 @@ Answer: Yes 
 
 Answer: 4 hrs
 
+[[Social media updated frequently]]
+
 3.How frequently do you buy products online?
 
 Answer : 2 times per month
+
+
 
 4.What are the advantages or disadvantages of marketing through social media?
 
@@ -46,6 +50,7 @@ Fraud case
 
 Answer: I will handle social media for spreading my business 
 
+[[Reach social media]]
   
 
   
@@ -61,6 +66,8 @@ Answer : Social media 
 7."When I go to any website I look for social media handle." Do you agree
 
 Answer : Agree
+
+
 
 8.What is your impression about websites not having social media handle and What is your
 
@@ -94,9 +101,11 @@ Answer : Agree. But most of the time bot is doing the conversation with customer
 
 Answer: I agree
 
+
 13."Social media is easy to use then shopping websites." How much do you agree and why.
 
 Answer: Agree
+[[Social Media easier to use than website]]
 
 14."It is more human friendly and less mechanical to shop in social media than in websites." How much do you agree and why.
 
@@ -106,6 +115,8 @@ Answer: Neutral
 
 Answer: Strongly Agree
 
+
+
 16.Do you like lack of formality of social media shops?
 
 Answer: Lack of formality.
@@ -114,11 +125,14 @@ Answer: Lack of formality.
 
 Answer: More convenient 
 
+
 18.Mass people of Bangladesh can use social media more skilfully than websites. " Do you
 
 agree.
 
 Answer: Strongly Agree
+
+[[Social Media easier for mass people]]
 
 19."Mass people uses social media more than any other websites. Its interface are familiar to
 
@@ -126,15 +140,21 @@ people. So it is more intuitive to them for using social media." Do you agree.
 
 Answer: Strongly Agree
 
+
+
 20."Different websites has different interface. Its make harder for mass people to use it." Do you
 
 agree
 
 Answer: Strongly Agree
 
+[[Website use problem due to different interface]]
+
 21."Shops with more social media activity seems more trustworthy." Do you agree
 
 Answer: Strongly Agree
+
+[[Social Media Activity makes a shop Trustworthy]]
 
 22."Familiar shops with known name makes them trustworthy." Do you agree.
 
@@ -146,9 +166,12 @@ influences you?
 
 Answer: So much
 
+[[Activeness in social media influences]]
+
 24.Do you check for reviews of a store in social media before buying any product? If yes how the review influences you?
 
 Answer: Good review increase interest 
+
 
 25."No of stars or no of positive reviews reflect the credibility." Do you agree.
 
@@ -176,6 +199,8 @@ again and again. How does this influences you to buy again?
 
 Answer: Very much
 
+[[Social media provokes to buy]]
+
 30.Trend of rating is normally not included in websites or social media handle. How useful do you think trend of rating will be?
 
 Answer: Useful 8/10
@@ -183,6 +208,8 @@ Answer: Useful 8/10
 31."When I go to a physical shop and read review of products of that shop on social media." How much do you agree and why?
 
 Answer: Agree
+
+
 
 32."Reviews of social media handle influence my decision in physical stores." Do you agree
 
