--- a/data points/45.md
+++ b/data points/45.md
@@ -46,7 +46,7 @@ feasible
 
 Answer: absolutely. great advertisement opportunity
 
-  
+[[Marketing better in social media]]
 
   
 
@@ -62,6 +62,8 @@ Answer : social media handle
 
 Answer : Agree
 
+
+
 8.What is your impression about websites not having social media handle and What is your
 
  impression about social media handles not having websites?
@@ -76,6 +78,7 @@ Answer : social media. would pick website if it has reputation
 
  Answer: yes I agree. but can't check product's authenticity
 
+[[Efficiently Reviewing and researching about a product in Social Media]]
   
 
 11."Many people likes talking one to one with shopkeeper during buying products. Social media
@@ -88,6 +91,8 @@ shopkeeper or shop social media handle replicates one to one talking. " How much
 
 Answer : mostly agree
 
+[[social media to replicate chatting]]
+
   
 
 12."Buying in social media gives more shopping vibe than website." How much do you agree and why.
@@ -98,21 +103,28 @@ Answer: agree.
 
 Answer: Agree
 
+[[Social Media easier to use than website]]
+
 14."It is more human friendly and less mechanical to shop in social media than in websites." How much do you agree and why.
 
 Answer: Agree
 
+[[Human interaction in Social Media]]
+
 15."Social media handles lacks the formality of website. "How much do you agree and why.
 
 Answer: Agree
+[[Websites are more formal]]
 
 16.Do you like lack of formality of social media shops?
 
 Answer: it's not a problem at all
 
+
 17.Do you think it is the reason for social media being more or less convenient?
 
 Answer: more convenient
+
 
 18.Mass people of Bangladesh can use social media more skilfully than websites. " Do you
 
@@ -120,11 +132,15 @@ agree.
 
 Answer: Agree
 
+
+
 19."Mass people uses social media more than any other websites. Its interface are familiar to
 
 people. So it is more intuitive to them for using social media." Do you agree.
 
 Answer: Agree
+[[Familiar UI in social media is more intuitive]]
+
 
 20."Different websites has different interface. Its make harder for mass people to use it." Do you
 
@@ -132,9 +148,12 @@ agree
 
 Answer: Strongly Agree
 
+[[Website use problem due to different interface]]
+
 21."Shops with more social media activity seems more trustworthy." Do you agree
 
 Answer: Strongly Agree
+[[Social Media Activity makes a shop Trustworthy]]
 
 22."Familiar shops with known name makes them trustworthy." Do you agree.
 
@@ -146,9 +165,13 @@ influences you?
 
 Answer: ultimately reviews matter
 
+
+
 24.Do you check for reviews of a store in social media before buying any product? If yes how the review influences you?
 
 Answer: mostly reviews affect me
+[[Social media review influences to buy]]
+
 
 25."No of stars or no of positive reviews reflect the credibility." Do you agree.
 
@@ -196,9 +219,12 @@ Answer: Disagree
 
  Answer: Agree
 
+
 35.How much your social media influences you to from selecting a shop to buying something from that shop?
 
 Answer: huge influence
+
+[[Social media review influences to buy]]
 
 36.Do you have any relatives in rural area?
 
