--- a/data points/46.md
+++ b/data points/46.md
@@ -100,7 +100,7 @@ shopkeeper or shop social media handle replicates one to one talking. " How much
 
 Answer : I don't agree that chatting with shopkeeper replicates one to one talking.
 
-  
+  [[Social Media Cannot replicate chatting]]
 
 12."Buying in social media gives more shopping vibe than website." How much do you agree and why.
 
@@ -120,7 +120,7 @@ Answer: Agree
 
 Answer: Strongly Agree
 
-
+[[Websites are more formal]]
 16.Do you like lack of formality of social media shops?
 
 Answer: No.
@@ -136,11 +136,15 @@ agree.
 Answer: Strongly Agree
 
 
+[[Social Media easier to use than website]]
+
 19."Mass people uses social media more than any other websites. Its interface are familiar to
 
 people. So it is more intuitive to them for using social media." Do you agree.
 
 Answer: Agree
+
+[[Familiar UI in social media is more intuitive]]
 
 20."Different websites has different interface. Its make harder for mass people to use it." Do you
 
@@ -148,13 +152,18 @@ agree
 
 Answer: Agree
 
+[[Website use problem due to different interface]]
+
 21."Shops with more social media activity seems more trustworthy." Do you agree
 
 Answer: Disagree
 
+
+
 22."Familiar shops with known name makes them trustworthy." Do you agree.
 
 Answer: Agree
+
 
 23.When you see many posts or activities you get familiar to the name of the shop. How does it
 
@@ -166,9 +175,13 @@ Answer: It does not.
 
 Answer: Positive reviews influence me to buy the product.
 
+[[Social media to see review of product]]
+[[Social media review influences to buy]]
+
 25."No of stars or no of positive reviews reflect the credibility." Do you agree.
 
 Answer: Agree
+
 
 26."After buying products, I always give feedback about their product in their social media handle."
 
@@ -176,9 +189,11 @@ Do you agree.
 
 Answer: Disagree
 
+
 27."My review will help someone in future to take their decisions." Do you agree.
 
 Answer: Agree
+
 
 28."It is useful in social media that feedback can be given both personally and privately in social
 
@@ -192,6 +207,8 @@ again and again. How does this influences you to buy again?
 
 Answer: Yes
 
+[[Social media provokes to buy]]
+
 30.Trend of rating is normally not included in websites or social media handle. How useful do you think trend of rating will be?
 
 Answer: Not much
@@ -199,6 +216,8 @@ Answer: Not much
 31."When I go to a physical shop and read review of products of that shop on social media." How much do you agree and why?
 
 Answer: Agree
+
+[[Social media to see review of product]]
 
 32."Reviews of social media handle influence my decision in physical stores." Do you agree
 
@@ -233,6 +252,8 @@ Answer: Very few
 effective? why?
 
 Answer: Yes. Since most people uses social medias it influences them to buy new products after seeing an advertisement.
+
+[[Social media provokes to buy]]
 
 40.How frequently do you check emails?
 
